<resources>
    <string name="app_name">Pc Sin Componentes</string>
    <string name="Informaticos">Informáticos</string>
    <string name="Ordenadores">Ordenadores</string>
    <string name="img">img</string>
    <string name="aniadir">Añadir</string>
    <string name="Editar">Editar</string>
    <string name="Volver">Volver</string>
    <string name="actualizar">Actualizar</string>
    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="dni">DNI:</string>
    <string name="TLF">Teléfono:</string>
    <string name="Borrar">Borrar</string>
    <string name="urlimgen">Url Imágen</string>
    <string name="idInfor">ID Informático:</string>
    <string name="marca">Marca:</string>
    <string name="modelo">Modelo:</string>
    <string name="creado">Creado:</string>
    <string name="actualizarPc">Actualizado:</string>
    <string name="InformaticosDis">Lista de informáticos disponibles</string>
</resources>